[tool.poetry]
name = "hia-search"
version = "0.0.1"
authors = [
  "Jacopo Margutti <jmargutti@redcross.nl>"
]
description = "HIA search"
readme = "README.md"
repository = "https://github.com/rodekruis/hia-search"
packages = [{include = "src"}]

[tool.poetry.dependencies]
python = ">=3.12,<3.13"
azure-identity = "*"
azure-monitor-opentelemetry-exporter = "*"
azure-search-documents = "*"
chromadb = "*"
clean-text = "*"
fastapi = "*"
langchain = "*"
langchain-community = "*"
langchain-openai = "*"
langgraph = "*"
orjson = "*"
pandas = "*"
python-multipart = "*"
spacy = "*"
twilio = "*"
Unidecode = "*"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
